--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ version = "0.16.1"
 repository = "https://github.com/lampsitter/egui_commonmark"
 
 [workspace.dependencies]
-egui_extras = "0.27"
-egui = "0.27"
+egui_extras = { version = "0.27", default-features = false }
+egui = { version = "0.27", default-features = false }
 
 egui_commonmark_backend = { version = "0.16.0", path = "egui_commonmark_backend", default-features = false }
 egui_commonmark_macros = { version = "0.16.0", path = "egui_commonmark_macros", default-features = false }
